--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                 <h5 class="title">Nossos Serviços</h5>
                 <div class="container">
                     <details class="collapse">
-                        <summary class="title">Gerenciamento da Cadeia Logística (SCM)</summary>
+                        <summary class="title">
+                            <span>Gerenciamento da Cadeia Logística (SCM)</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <p>A estrutura logística deve ser efetuada segundo as variáveis estratégicas, com estudos de localização com aspecto técnico, estudos de gerenciamento e planejamento operacional através de estudos de equipamentos de movimentação, armazenagem e layout. O dimensionamento de veículos para frotas, mão de obras para operações e recursos tecnológicos para execução das operações, concomitantes com capacitações dos colaboradores, permitem que o nível de serviço logístico comprometido com o cliente seja efetivamente adequadro.</p>
                             <ul>
@@ -116,7 +119,10 @@
                         </div>
                     </details>
                     <details class="collapse">
-                        <summary class="title">Gestão de Pessoas (Gestão e Gente)</summary>
+                        <summary class="title">
+                            <span>Gestão de Pessoas (Gestão e Gente)</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <p>Pessoas são o capital mais importante das organizações, pois elas as representam para o mercado. Saber o grau de satisfação, qualificação e motivação dos seus colaboradores (seja no nível estratégico, tatico e/ou operacional), permita a realização de ações que contribuam paraa o crescimento e desenvolvimento das pessoas</p>
                             <ul>
@@ -136,7 +142,10 @@
                         </div>
                     </details>
                     <details class="collapse">
-                        <summary class="title">Gestão da Qualidade e Mapeamento de Processos</summary>
+                        <summary class="title">
+                            <span>Gestão da Qualidade e Mapeamento de Processos</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <p>A gestão estratégica da qualidade traz uma série de possibilidades como: organização e padronização de processos, fidelização dos clientes, base para melhoria contínua (KAIZEN), foco na prevenção, capacitação e qualificação dos colaboradores, tratamento sistemático de problemas, definição clara de responsabilidades, redução de custos com eliminação do retrabalho, perdas, desperdícios e inspeções.</p>
                             <ul>
@@ -159,7 +168,10 @@
                         </div>
                     </details>
                     <details class="collapse">
-                        <summary class="title">Gestão Mercadológica</summary>
+                        <summary class="title">
+                            <span>Gestão Mercadológica</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <p>Marketing é um processo gerencial de grande importância dentro das organizações, independente dos seus portes e/ou áreas de atuação, uma vez que o planejamento adequado as impulsiona na direção correta, o que permite a antecipação de ações frente as ameaças e o aproveitamento das oportunidades, resultado de um eficiente diagnóstico dos ambientes externos e internos, o que torna sua empresa mais competitiva.</p>
                             <ul>
@@ -179,7 +191,10 @@
                         </div>
                     </details>
                     <details class="collapse">
-                        <summary class="title">Tecnologia da Informação e Comunicação (TIC)</summary>
+                        <summary class="title">
+                            <span>Tecnologia da Informação e Comunicação (TIC)</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <p>O sucesso de um negócio depende do espaço físico, da capacidade tecnológica, do capital empregado e da capacidade do seu pessoal. Por isso, quanto mais avançada é a tecnologia investida nas organizações, maior será a importância de capacitar os colaboradores que irão atuar e executar suas funções com as ferramentas implantadas. Damos suporte desde a implantação de sistemas de informação, que vai da análise de aderência, dos requisitos até aos treinamentos dos colaboradores. </p>
                             <ul>
@@ -193,7 +208,10 @@
                         </div>
                     </details>
                     <details class="collapse">
-                        <summary class="title">Treinamentos e Consultorias</summary>
+                        <summary class="title">
+                            <span>Treinamentos e Consultorias</span>
+                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
                         <div class="description">
                             <table>
                                 <thead>
