--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@
         <footer>
             <div class="footer">
                 <div>
+                    <img src="assets/img/logo.png" alt="Logo da Empresa">
+                </div>
+                <div>
                     <h5>GAC</h5>
                     <nav>
                         <ul>
@@ -443,7 +446,7 @@
             </div>
             <div class="copy">
                 <div class="info-gac">
-                    <a onclick="event.preventDefault()">&copy; 2023 GAC | Todos os direitos reservados</a>
+                    <a onclick="event.preventDefault()">&copy; 2024 GAC | Todos os direitos reservados</a>
                 </div>
                 <div>
                     <a href="https://alisonmartinsss.github.io/Portfolio/" target="_blank">Desenvolvido por Alison Martins</a>
